overlapping chat  bugfix

--- a/public/main.css
+++ b/public/main.css
@@ -133,7 +133,6 @@ header {
   flex-flow: column; }
 
 #chatWrite {
-  position: absolute;
   bottom: 0;
   display: flex;
   align-items: center;
@@ -157,7 +156,7 @@ header {
 
 #chatRead {
   font-size: 1em;
-  padding: 0.9em 1em 3em;
+  padding: 0.5em 1em;
   /* font-family: 'Courier New', mono; */
   overflow-y: auto;
   height: 100%;
